--- a/firstapp/templates/firstapp/index.html
+++ b/firstapp/templates/firstapp/index.html
@@ -8,5 +8,6 @@
 Welcome to home page! <br/>
 <ul>
     <li><a href="{% url 'disp_form' %}">Display Form</a></li>
+    <li><a href="{% url 'show_details' %}">Show Details</a></li>
 </ul>
 </body>
