- edit record implemented - created update.html

--- a/firstapp/templates/firstapp/index.html
+++ b/firstapp/templates/firstapp/index.html
@@ -7,7 +7,7 @@
 <body>
 Welcome to home page! <br/>
 <ul>
-    <li><a href="{% url 'disp_form' %}">Display Form</a></li>
+    <li><a href="{% url 'disp_form' %}">Insert data</a></li>
     <li><a href="{% url 'show_details' %}">Show Details</a></li>
 </ul>
 </body>
